--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,17 @@
 			<artifactId>json</artifactId>
 			<version>20160212</version>
 		</dependency>
+		<dependency>
+    		<groupId>com.google.inject</groupId>
+    		<artifactId>guice</artifactId>
+    		<version>4.0</version>
+		</dependency>
+		<dependency>
+        	<artifactId>guava</artifactId>
+        	<groupId>com.google.guava</groupId>
+        	<type>jar</type>
+       		 <version>19.0</version>
+		</dependency>
    	</dependencies>
    	<build>
    		<plugins>
